GNOME Bugzilla – Bug 765104
Possible licensing problem in gtksourceview/gtksourcemap.{c,h}
Last modified: 2016-04-15 22:29:08 UTC
gtksourceview 3.20.1 seems to be relicensed to LGPL-2.1+ with the exception of two files: gtksourceview/gtksourcemap.{c,h}. This seems to be an oversight.
Created attachment 326141 [details] [review] map: the license is LGPL
Attachment 326141 [details] pushed as 04404d9 - map: the license is LGPL