map: the license is LGPL

https://bugzilla.gnome.org/show_bug.cgi?id=765104